@@ -1,6 +1,8 @@
 2.38 (0000-00-00)
 Libraries:
 - libgwyprocess: New function to find a height threshold by the Otsu method.
+- libgwyprocess: Macro gwy_data_field_invalidate() is also provided as
+  a function so it is available in pygwy now.
 
 Modules:
 - Filters tool: Gaussian smoothing is no longer limited to integer FWHM.
